new configuration of zsh with oh my zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,8 @@
 # TMUX BASICO
 # ==============================
 
+set-option -g default-shell /bin/zsh
+
 set -g default-terminal "screen-256color"
 
 bind r source-file ~/.tmux.conf \; display-message "tmux reloaded"
