--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,8 +20,12 @@ set -g @plugin 'dracula/tmux'
 # DRACULA SETTINGS
 # ==============================
 
-set -g @dracula-show-powerline true
-set -g @dracula-plugins "git cpu-usage ram-usage prefix-highlight"
+set -g @dracula-show-powerline false
+set -g @dracula-show-flags false
+set -g @dracula-show-left-icon session
+set -g @dracula-plugins "git cpu-usage ram-usage prefix-highlight, time"
+set -g @dracula-day-month true
+set -g @dracula-military-time true
 
 # ==============================
 # PLUGINS
@@ -30,13 +34,11 @@ set -g @dracula-plugins "git cpu-usage ram-usage prefix-highlight"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 
-set -g @plugin 'joshmedeski/tmux-fzf'
-set -g @plugin 'tmux-plugins/tmux-menus'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'laktak/extrakto'
 
 # ==============================
 # TPM
 # ==============================
-
 run '~/.tmux/plugins/tpm/tpm'
